--- a/first-aid/bruise-hand.html
+++ b/first-aid/bruise-hand.html
@@ -36,10 +36,10 @@
             <h3>Шаги:</h3>
             <ul>
                 <li>Усадить пострадавшего, слегка наклонить голову вперед, чтобы кровь могла свободно стекать.</li>
-                <li>Прижать одну ноздрю к носовой перегородке на 5-10 минут, чтобы остановить кровотечение.</li>
+                <li>Сожмите крытья носа на 15-20 минут. При этом пострадавший должен дышать ртом.</li>
                 <li>Приложить холод к переносицы на 15-20 минут.</li>
-                <li>Если кровотечение не остановилось в течение 15 минут, вставьте марлевые тампоны в носовые ходы.</li>
-                <li>Если кровь не останавливается — вызовите скорую помощь.</li>
+                <li>Если кровотечение не остановилось в течение 15-20 минут, необходимо вызвать скорую помощь.</li>
+                <li>Рекомендуйте пострадавшему сплевывать кровь (при попадании крови в желудок может развиться рвота).</li>
             </ul>
         </section>
 
