--- a/first-aid/fainting.html
+++ b/first-aid/fainting.html
@@ -35,15 +35,16 @@
         <section class="content">
             <h3>Алгоритм действий при обмороке:</h3>
             <ul>
-                <li>Необходимо уложить пострадавшего в горизонтальное положение, приподняв ноги для улучшения кровообращения.</li>
+                <li>Необходимо уложить пострадавшего в устойчивое боковое положение.</li>
                 <li>Если возможно, обеспечьте приток свежего воздуха, расстегнув стесняющую одежду.</li>
-                <li>Попробуйте аккуратно размешать пострадавшего, чтобы восстановить сознание.</li>
+                <li>После того как ребегок очнется, напоите его чаем с сахаром.</li>
                 <li>Если пострадавший не приходит в себя через 3-5 минут, вызовите скорую медицинскую помощь.</li>
+                <li>ЧТо нужно учитывать: обморок может быть признаком более серьезных проблем, такие как сердечные заболевания или недостаток кислорода.</li>
                             </ul>
         </section>
 <section class="caution">
             <h3>Важно!</h3>
-            <p>Не оставляйте пострадавшего без присмотра до прибытия помощи или восстановления сознания.</p>
+            <p>Соблюдать осторожность и при необходимости обратиться за медецинской помощью. Рекомендовать родителям (законным представителям) обратиться к врачу для обследования и определения причин обморока.</p>
         </section>
 
         <section class="caution">
