--- a/first-aid/head-injury.html
+++ b/first-aid/head-injury.html
@@ -53,11 +53,15 @@
             <h3>Опасность ушиба головы:</h3>
             <p>При ушибе головы существует риск сотрясения головного мозга. Вот некоторые симптомы сотрясения:</p>
             <ul>
-                <li>Головокружение;</li>
-                <li>Нарушение координации движений;</li>
-                <li>Изменение голоса;</li>
-                <li>Нарушение слуха;</li>
-                <li>Тошнота.</li>
+                <li>Потеря сознания;</li>
+                <li>Потеря памяти на короткий период (не может вспомнить как произошла травма);</li>
+                <li>Рвота;</li>
+                <li>Головокружение, дезориентация;</li>
+                <li>Нарушение дыхания.</li>
+                <li>Бледность кожи и холодный пот.</li>
+                <li>Сильная головная боль.</li>
+                <li>Синяки вокруг глаз.</li>
+                <li>Кровь и светлая жидкость из носа или уха.</li>
             </ul>
             <p>Если симптомы сотрясения выражены, срочно вызовите скорую медицинскую помощь.</p>
         </section>
