--- a/cold/cold-source.html
+++ b/cold/cold-source.html
@@ -92,6 +92,7 @@
                  <li><strong>1-й этаж — гардероб:</strong> В гардеробе есть холодильник, в котором также можно найти пакеты с холодом для первой помощи.</li>
                 <li><strong>2-й этаж — студия «Реверанс»:</strong> В студии имеется холодильник с ледяными пакетами, которые можно использовать при необходимости.</li>
 		<li><strong>3-й этаж — приемная:</strong> Здесь находится контейнер с пакетом льда, доступный в экстренных случаях.</li>
+		<li><strong>СК "Королева риска":</strong> Здесь находится сухой лед, доступный в экстренных случаях.</li>   
             </ul>
         </section>
 
