--- a/first-aid/first-aid-locations.html
+++ b/first-aid/first-aid-locations.html
@@ -90,7 +90,7 @@
                 <li>Пост охраны – Зиновьева Е.В.</li>
                 <li>Каб. 102 – Мяндин В.А.</li>
                 <li>Каб. 103 – Мухина П.М.</li>
-                <li>Каб. 104 – Алескерова А.Г.</li>
+                <li>Каб. 104 – Швецов А.В.</li>
             </ul>
         </div>
 
@@ -98,12 +98,10 @@
         <div class="panel">
             <img src="../images/floor-2.png" alt="Схема 2-го этажа с аптечками">
             <ul>
-                <li>Каб. 203 – Бродовская С.Ю.</li>
                 <li>Учительская студии «Реверанс» – Мартынова Е.М.</li>
                 <li>Зал художественной гимнастики №1 – Андрианова Е.И.</li>
                 <li>Каб. 213 – Шуктомова Н.Н.</li>
                 <li>Каб. 214 – Алескерова А.Г.</li>
-                <li>Каб. 216 – Шуктомова Н.Н.</li>
                 <li>Зал художественной гимнастики – Зезегов А.А.</li>
             </ul>
         </div>
@@ -113,10 +111,10 @@
             <img src="../images/floor-3.png" alt="Схема 3-го этажа с аптечками">
             <ul>
                 <li>Каб. 311 – Мухина П.М.</li>
-                <li>Тренажерный зал – Ковров К.К.</li>
-                <li>Тир – Ковров К.К.</li>
+                <li>Тренажерный зал– Швецов А.В.</li>
+                <li>Тир – Швецов А.В.</li>
                 <li>Класс бальных танцев – Попова Н.В.</li>
-                <li>Приемная – Макусинская С.Л.</li>
+                <li>Приемная – Соболева И.В.</li>
             </ul>
         </div>
 
@@ -127,7 +125,7 @@
                 <li>Каб. 400 – Капустина А.И.</li>
                 <li>Каб. 404 – Мяндин В.А.</li>
                 <li>Каб. 407 – Лисеенкова Т.В.</li>
-                <li>Каб. 408 – Нестерова Л.А.</li>
+                <li>Каб. 408 – Петрашкевич О.В.</li>
                 <li>Каб. 411 – Попова Л.В.</li>
                 <li>Каб. 412 – Большедонова А.М.</li>
             </ul>
