--- a/first-aid/employee-actions.html
+++ b/first-aid/employee-actions.html
@@ -21,10 +21,10 @@
         </div>
     </header>
 
-<!-- Кнопка возврата к первой помощи -->
-        <section class="back-button">
-            <a href="first-aid.html">← Вернуться к первой помощи</a>
-        </section>
+    <!-- Кнопка возврата к первой помощи -->
+    <section class="back-button">
+        <a href="first-aid.html">← Вернуться к первой помощи</a>
+    </section>
 
     <main class="container">
         <section class="hero">
@@ -35,29 +35,33 @@
         <section class="content">
             <h3>Алгоритм действий при несчастном случае с учащимися</h3>
             <ol>
+                <li><strong>Оцените ситуацию:</strong>
+                    <ul>
+                        <li>Убедиться в своей безопасности и безопасности окружающих.</li>
+                        <li>Оценить состояние пострадавшего: сознание, дыхание, наличие кровотечения.</li>
+                    </ul>
+                </li>
                 <li><strong>Немедленно сообщите</strong> об инциденте:
                     <ul>
                         <li>Заместителю директора <strong>Зиновьевой Е.В.</strong> 📞 <a href="tel:89505654776">89505654776</a></li>
                         <li>Если недоступна — директору <strong>Матухно Н.Н.</strong> 📞 <a href="tel:89042015742">89042015742</a></li>
+                        <li>Родителям (законным представителям)</li>
                     </ul>
                 </li>
                 <li><strong>Окажите первую помощь</strong> или организуйте ее оказание. При необходимости вызовите скорую помощь.</li>
-                <li><strong>Не оставляйте пострадавшего одного!</strong> Передайте учащегося родителям или сопровождающему взрослому.</li>
-                <li><strong>Оповестите родителей (законных представителей).</strong></li>
-                <li><strong>Обеспечьте безопасность других учащихся.</strong> Устраните факторы, которые могут привести к повторной травме.</li>
+                <li><strong>Не оставляйте пострадавшего одного!</strong> Оставайтесь с пострадавшим до прибытия родителей (законных представителей) и/или прибытия медицинской помощи.</li>
                 <li><strong>Зафиксируйте обстоятельства происшествия.</strong> Сделайте фото/видео, соберите показания свидетелей.</li>
                 <li><strong>Запросите объяснение</strong> от пострадавшего и очевидцев.</li>
-                <li><strong>Напишите объяснительную записку.</strong> Педагог должен предоставить отчет директору в день инцидента.</li>
-                <li><strong>Контролируйте состояние пострадавшего.</strong> Поддерживайте связь с родителями до выздоровления.</li>
+                <li><strong>Напишите объяснительную записку.</strong> Педагог должен предоставить объяснительную директору в день инцидента.</li>
+                <li><strong>Контролируйте состояние пострадавшего.</strong> Поддерживайте связь с родителями (законными представителями) до выздоровления.</li>
             </ol>
         </section>
 
         <section class="caution">
             <h3>Важно!</h3>
             <p>Педагог несет ответственность за безопасность учащихся не только во время занятий, но и в перерывах между ними.</p>
+            <p><strong>ВАЖНО:</strong> Не паникуйте и сохраняйте спокойствие.</p>
         </section>
-
-        
     </main>
 
     <footer>
