--- a/first-aid/fainting.html
+++ b/first-aid/fainting.html
@@ -33,23 +33,30 @@
         </section>
 
         <section class="content">
+            <h3>Признаки обморока:</h3>
+            <ul>
+                <li>Бледность</li>
+                <li>Внезапная кратковременная потеря сознания</li>
+            </ul>
+
             <h3>Алгоритм действий при обмороке:</h3>
             <ul>
-                <li>Необходимо уложить пострадавшего в устойчивое боковое положение.</li>
-                <li>Если возможно, обеспечьте приток свежего воздуха, расстегнув стесняющую одежду.</li>
-                <li>После того как ребегок очнется, напоите его чаем с сахаром.</li>
-                <li>Если пострадавший не приходит в себя через 3-5 минут, вызовите скорую медицинскую помощь.</li>
-                <li>ЧТо нужно учитывать: обморок может быть признаком более серьезных проблем, такие как сердечные заболевания или недостаток кислорода.</li>
-                            </ul>
+                <li>Уложите пострадавшего в устойчивое боковое положение.</li>
+                <li>Обеспечьте приток свежего воздуха, расстегните стесняющую одежду.</li>
+                <li>После того как ребенок очнётся, напоите его тёплым сладким чаем.</li>
+                <li>Если пострадавший не приходит в себя через 3–5 минут, вызовите скорую медицинскую помощь.</li>
+                <li>Обморок может быть признаком более серьёзных проблем, таких как сердечные заболевания или недостаток кислорода.</li>
+            </ul>
         </section>
-<section class="caution">
+
+        <section class="caution">
             <h3>Важно!</h3>
-            <p>Соблюдать осторожность и при необходимости обратиться за медецинской помощью. Рекомендовать родителям (законным представителям) обратиться к врачу для обследования и определения причин обморока.</p>
+            <p>Соблюдайте осторожность и при необходимости обращайтесь за медицинской помощью. Рекомендуется сообщить родителям (законным представителям) и направить ребёнка на медицинское обследование.</p>
         </section>
 
         <section class="caution">
             <h3>Что нужно учитывать:</h3>
-            <p>Обморок может быть признаком более серьезных проблем, таких как сердечные заболевания или недостаток кислорода. Важно соблюдать осторожность и при необходимости обратиться за медицинской помощью.</p>
+            <p>Обморок может быть признаком более серьёзных проблем, таких как сердечные заболевания или недостаток кислорода. Важно соблюдать спокойствие и действовать по алгоритму.</p>
         </section>
     </main>
 
