--- a/first-aid/injury-types.html
+++ b/first-aid/injury-types.html
@@ -20,11 +20,11 @@
             </nav>
         </div>
     </header>
-	
+    
 <!-- Кнопка возврата к первой помощи -->
-        <section class="back-button">
-            <a href="first-aid.html">← Вернуться к первой помощи</a>
-        </section>
+    <section class="back-button">
+        <a href="first-aid.html">← Вернуться к первой помощи</a>
+    </section>
 
     <main class="container">
         <section class="hero">
@@ -66,6 +66,12 @@
             <div class="feature" onclick="location.href='fainting.html'">
                 <h3>Обморок</h3>
                 <p>Как действовать при обмороке.</p>
+            </div>
+
+            <!-- Новый блок для травмы глаз и век -->
+            <div class="feature" onclick="location.href='eye-injury.html'">
+                <h3>Травма глаз и век</h3>
+                <p>Как оказать первую помощь при травме глаз и век.</p>
             </div>
         </section>
     </main>
