--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h3>Локация аптечек</h3>
             <p>Где найти аптечку в здании.</p>
         </div>
-        <div class="feature" onclick="location.href='test.html'">
+        <div class="feature" onclick="location.href='first-aid/test.html'">
             <h3>Проверьте свои знания</h3>
             <p>Пройдите тест по первой помощи.</p>
         </div>
