--- a/first-aid/first-aid-locations.html
+++ b/first-aid/first-aid-locations.html
@@ -111,7 +111,7 @@
             <img src="../images/floor-3.png" alt="Схема 3-го этажа с аптечками">
             <ul>
                 <li>Каб. 311 – Мухина П.М.</li>
-                <li>Тренажерный зал– Швецов А.В.</li>
+                <li>Тренажерный зал – Рычков А.В.</li>
                 <li>Тир – Швецов А.В.</li>
                 <li>Класс бальных танцев – Попова Н.В.</li>
                 <li>Приемная – Соболева И.В.</li>
